--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "^2.2.4",
     "require-dir": "^0.3.0",
     "vinyl-map": "^1.0.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^3.8.0"
   }
 }
