--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.3.15",
     "html-frontmatter": "^1.5.0",
     "lodash": "^3.6.0",
-    "marked": "^0.3.3"
+    "marked": "^0.3.3",
+    "ramda": "^0.14.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.15",
